WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90349
[mac] Non-BMP characters in vertical text appear as missing glyphs
https://bugs.webkit.org/show_bug.cgi?id=90349
Summary
[mac] Non-BMP characters in vertical text appear as missing glyphs
mitz
Reported
2012-07-01 12:31:34 PDT
Created
attachment 150333
[details]
Test case <
rdar://problem/11785743
> In vertical text, characters outside the BMP appear as missing glyphs. See attached test case.
Attachments
Test case
(219 bytes, text/html)
2012-07-01 12:31 PDT
,
mitz
no flags
Details
Account for the behavior of wkGetVerticalGlyphsForCharacters CTFontGetGlyphsForCharacters with surrogate pairs
(18.18 KB, patch)
2012-07-01 12:37 PDT
,
mitz
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-01 12:37:31 PDT
Created
attachment 150334
[details]
Account for the behavior of wkGetVerticalGlyphsForCharacters CTFontGetGlyphsForCharacters with surrogate pairs
Dean Jackson
Comment 2
2012-07-01 16:54:18 PDT
Comment on
attachment 150334
[details]
Account for the behavior of wkGetVerticalGlyphsForCharacters CTFontGetGlyphsForCharacters with surrogate pairs View in context:
https://bugs.webkit.org/attachment.cgi?id=150334&action=review
> Source/WebCore/ChangeLog:13 > + functionsâ behavior of placing glyphs at indices corresponding to the first character of
Is the bad possessive apostrophe an error in your patch or in bugzilla tools?
mitz
Comment 3
2012-07-01 16:58:54 PDT
(In reply to
comment #2
)
> (From update of
attachment 150334
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=150334&action=review
> > > Source/WebCore/ChangeLog:13 > > + functionsâ behavior of placing glyphs at indices corresponding to the first character of > > Is the bad possessive apostrophe an error in your patch or in bugzilla tools?
It’s
bug 75394
. Thanks for the review!
mitz
Comment 4
2012-07-01 17:10:18 PDT
Fixed in <
http://trac.webkit.org/r121645
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug