<rdar://problem/11785743> [mac] Non-BMP characters in vertical text appear as missing glyphs https://bugs.webkit.org/show_bug.cgi?id=90349

Reviewed by Dean Jackson.

Source/WebCore:

Test: platform/mac/fast/text/vertical-surrogate-pair.html

* platform/graphics/mac/GlyphPageTreeNodeMac.cpp:
(WebCore::GlyphPage::fill): When calling wkGetVerticalGlyphsForCharacters or
CTFontGetGlyphsForCharacters with a buffer consisting of surrogate pair, account for those
functions’ behavior of placing glyphs at indices corresponding to the first character of
each pair.

LayoutTests:

* platform/mac/fast/text/vertical-surrogate-pair.html: Added.
* platform/mac/platform/mac/fast/text/vertical-surrogate-pair-expected.png: Added.
* platform/mac/platform/mac/fast/text/vertical-surrogate-pair-expected.txt: Added.



Canonical link: https://commits.webkit.org/108207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121645 268f45cc-cd09-0410-ab3c-d52691b4dbfc